--- a/lab/lab3/CMakeLists.txt
+++ b/lab/lab3/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(lab3_1)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "~/Desktop/ClassNotes/ECE244/lab/lab3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp Rparser.cpp Rparser.h Node.cpp Node.h Resistor.cpp Resistor.h)
